@@ -6,7 +6,10 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -29,15 +32,15 @@ import org.broadinstitute.consent.http.models.DarCollection;
 import org.broadinstitute.consent.http.models.DataAccessRequest;
 import org.broadinstitute.consent.http.models.DataUse;
 import org.broadinstitute.consent.http.models.Dataset;
+import org.broadinstitute.consent.http.models.DatasetProperty;
 import org.broadinstitute.consent.http.models.Election;
 import org.broadinstitute.consent.http.models.User;
 import org.broadinstitute.consent.http.models.Vote;
 import org.broadinstitute.consent.http.models.dto.DatasetMailDTO;
 import org.broadinstitute.consent.http.service.dao.VoteServiceDAO;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.broadinstitute.consent.http.util.ConsentLogger;
 
-public class VoteService {
+public class VoteService implements ConsentLogger {
 
     private final UserDAO userDAO;
     private final DarCollectionDAO darCollectionDAO;
@@ -50,7 +53,6 @@ public class VoteService {
     private final VoteDAO voteDAO;
     private final VoteServiceDAO voteServiceDAO;
 
-    private final Logger logger = LoggerFactory.getLogger(this.getClass().getName());
     @Inject
     public VoteService(UserDAO userDAO, DarCollectionDAO darCollectionDAO, DataAccessRequestDAO dataAccessRequestDAO,
                        DatasetAssociationDAO datasetAssociationDAO, DatasetDAO datasetDAO, ElectionDAO electionDAO,
@@ -144,8 +146,6 @@ public class VoteService {
 
     /**
      * Create votes for an election
-     *
-     * TODO: Refactor duplicated code when DatabaseElectionAPI is fully replaced by ElectionService
      *
      * @param election       The Election
      * @param electionType   The Election type
@@ -258,12 +258,12 @@ public class VoteService {
             List<Vote> updatedVotes = voteServiceDAO.updateVotesWithValue(votes, voteValue, rationale);
             if (voteValue) {
                 try {
-                    notifyResearchersOfDarApproval(updatedVotes);
+                    sendDatasetApprovalNotifications(updatedVotes);
                 } catch (Exception e) {
-                    // We can recover from an email error, log it and don't fail the overall process.
+                    // We can recover from email errors, log it and don't fail the overall process.
                     String voteIds = votes.stream().map(Vote::getVoteId).map(Object::toString).collect(Collectors.joining(","));
-                    String message = "Error notifying researchers for votes: [" + voteIds + "], " + e.getMessage();
-                    logger.error(message);
+                    String message = "Error notifying researchers and custodians for votes: [" + voteIds + "]: " + e.getMessage();
+                    logException(message, e);
                 }
             }
             return updatedVotes;
@@ -273,15 +273,15 @@ public class VoteService {
     }
 
     /**
-     * Review all positive, FINAL votes and send a notification to the researcher describing the approved access to
-     * datasets on their Data Access Request.
+     * Review all positive, FINAL votes and send a notification to the researcher and data
+     * custodians describing the approved access to datasets on their Data Access Request.
      *
-     * @param votes List of Vote objects. In practice, this will be a batch of votes for a group of elections for
-     *              datasets that all have the same data use restriction in a single DarCollection
-     *              This method is flexible enough to send email for any number of unrelated elections in various
-     *              DarCollections.
+     * @param votes List of Vote objects. In practice, this will be a batch of votes for a group of
+     *              elections for datasets that all have the same data use restriction in a single
+     *              DarCollection. This method is flexible enough to send email for any number of
+     *              unrelated elections in various DarCollections.
      */
-    public void notifyResearchersOfDarApproval(List<Vote> votes) {
+    public void sendDatasetApprovalNotifications(List<Vote> votes) {
 
         List<Integer> finalElectionIds = votes.stream()
             .filter(Vote::getVote) // Safety check to ensure we're only emailing for approved election
@@ -317,23 +317,25 @@ public class VoteService {
                 .map(DataAccessRequest::getDatasetIds)
                 .flatMap(List::stream)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
             List<Dataset> approvedDatasetsInCollection = datasets.stream()
                 .filter(d -> collectionDatasetIds.contains(d.getDataSetId()))
-                .collect(Collectors.toList());
+                .toList();
 
             if (!approvedDatasetsInCollection.isEmpty()) {
                 String darCode = c.getDarCode();
-                Integer researcherId = c.getCreateUserId();
-                List<DatasetMailDTO> datasetMailDTOs = approvedDatasetsInCollection.stream()
+                User researcher = userDAO.findUserById(c.getCreateUserId());
+                Integer researcherId = researcher.getUserId();
+                List<DatasetMailDTO> datasetMailDTOs = approvedDatasetsInCollection
+                    .stream()
                     .map(d -> new DatasetMailDTO(d.getName(), d.getDatasetIdentifier()))
-                    .collect(Collectors.toList());
+                    .toList();
 
                 // Get all Data Use translations, distinctly in the case that there are several with the same
                 // data use, and then conjoin them for email display.
                 List<DataUse> dataUses = approvedDatasetsInCollection.stream()
                     .map(Dataset::getDataUse)
-                    .collect(Collectors.toList());
+                    .toList();
                 List<String> dataUseTranslations = dataUses.stream()
                     .map(d -> useRestrictionConverter.translateDataUse(d, DataUseTranslationType.DATASET))
                     .distinct()
@@ -343,10 +345,84 @@ public class VoteService {
                 try {
                     emailService.sendResearcherDarApproved(darCode, researcherId, datasetMailDTOs, translation);
                 } catch (Exception e) {
-                    logger.error("Error sending researcher dar approved email: " + e.getMessage());
+                    logException("Error sending researcher dar approved email: " + e.getMessage(), e);
+                }
+                try {
+                    notifyCustodiansOfApprovedDatasets(approvedDatasetsInCollection, researcher, darCode);
+                } catch (Exception e) {
+                    logException("Error notifying custodians of dar approved email: " + e.getMessage(), e);
                 }
             }
         });
+    }
+
+    /**
+     * Notify all data submitters, custodians, depositors, and owners of a dataset approval.
+     *
+     * @param datasets Requested datasets
+     * @param researcher The approved researcher
+     * @param darCode The DAR Collection Code
+     * @throws IllegalArgumentException when there are no custodians or depositors to notify
+     */
+    protected void notifyCustodiansOfApprovedDatasets(List<Dataset> datasets, User researcher, String darCode) throws IllegalArgumentException {
+        Map<User, HashSet<Dataset>> custodianMap = new HashMap<>();
+        // Find all the custodians, data owners, and data submitters to notify for each dataset
+        datasets.forEach(d -> {
+            // Data Submitter
+            if (Objects.nonNull(d.getCreateUserId())) {
+                User submitter = userDAO.findUserById(d.getCreateUserId());
+                if (Objects.nonNull(submitter)) {
+                    custodianMap.putIfAbsent(submitter, new HashSet<>());
+                    custodianMap.get(submitter).add(d);
+                }
+            }
+            // Data Custodians and Data Depositor
+            List<String> custodianEmails = d.getProperties()
+                .stream()
+                .filter(p ->
+                    (Objects.nonNull(p.getSchemaProperty()) && p.getSchemaProperty().equalsIgnoreCase("dataCustodianEmail")) ||
+                    p.getPropertyName().equalsIgnoreCase("Data Depositor"))
+                .map(DatasetProperty::getPropertyValueAsString)
+                .distinct()
+                .toList();
+            if (!custodianEmails.isEmpty()) {
+                userDAO.findUsersByEmailList(custodianEmails).forEach(u -> {
+                    custodianMap.putIfAbsent(u, new HashSet<>());
+                    custodianMap.get(u).add(d);
+                });
+            }
+            // Data Owners
+            List<Integer> ownerUserIds = datasetAssociationDAO.getDataOwnersOfDataSet(d.getDataSetId());
+            if (!ownerUserIds.isEmpty()) {
+                userDAO.findUsers(ownerUserIds).forEach(u -> {
+                    custodianMap.putIfAbsent(u, new HashSet<>());
+                    custodianMap.get(u).add(d);
+                });
+            } else {
+                logWarn("Unable to find dataset owner associations for dataset identifier: " + d.getDatasetIdentifier());
+            }
+        });
+        if (custodianMap.isEmpty()) {
+            String identifiers = datasets.stream().map(Dataset::getDatasetIdentifier).collect(Collectors.joining(", "));
+            throw new IllegalArgumentException("No submitters, custodians, owners, or depositors found for provided dataset identifiers: " + identifiers);
+        }
+        // For each custodian, notify them of their approved datasets
+        for (Map.Entry<User, HashSet<Dataset>> entry: custodianMap.entrySet()) {
+            List<DatasetMailDTO> datasetMailDTOs = entry.getValue()
+                .stream()
+                .map(d -> new DatasetMailDTO(d.getName(), d.getDatasetIdentifier()))
+                .toList();
+            try {
+                emailService.sendDataCustodianApprovalMessage(
+                    entry.getKey(),
+                    darCode,
+                    datasetMailDTOs,
+                    entry.getKey().getDisplayName(),
+                    researcher.getEmail());
+            } catch (Exception e) {
+                logException("Error sending custodian approval email: " + e.getMessage(), e);
+            }
+        }
     }
 
     /**
@@ -375,7 +451,7 @@ public class VoteService {
         List<Election> nonOpenAccessElections = elections.stream()
                 .filter(election -> election.getElectionType().equals(ElectionType.DATA_ACCESS.getValue()))
                 .filter(election -> !election.getStatus().equals(ElectionStatus.OPEN.getValue()))
-                .collect(Collectors.toList());
+                .toList();
         if (!nonOpenAccessElections.isEmpty()) {
             throw new IllegalArgumentException("There are non-open Data Access elections for provided votes");
         }
@@ -384,7 +460,7 @@ public class VoteService {
         List<Election> disallowedElections = elections.stream()
                 .filter(election -> !election.getElectionType().equals(ElectionType.DATA_ACCESS.getValue()))
                 .filter(election -> !election.getElectionType().equals(ElectionType.RP.getValue()))
-                .collect(Collectors.toList());
+                .toList();
         if (!disallowedElections.isEmpty()) {
             throw new IllegalArgumentException("There are non-Data Access/RP elections for provided votes");
         }
